// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`test ElementPanel Header in mobile should render MainType correctly 1`] = `
<div>
  <div
    class="adm-floating-panel adm-floating-panel-bottom panel panel"
    data-animating="false"
    style="height: 627px; transform: translateY(calc(100% + (-627px)));"
  >
    <div
      class="adm-floating-panel-mask"
      style="display: none;"
    />
    <div
      class="adm-floating-panel-header"
    >
      <div
        class="adm-floating-panel-bar"
      />
    </div>
    <div
      class="adm-floating-panel-content"
    >
      <span
        class="anticon close-icon"
        role="img"
        tabindex="-1"
      >
        <svgr-url
          aria-hidden="true"
          class=""
          fill="currentColor"
          focusable="false"
          height="1em"
          width="1em"
        />
      </span>
      <div
        class="title"
      >
        Elements
      </div>
      <div
        class="header hide-search"
      >
        <button
          class="ant-btn css-dev-only-do-not-override-hash ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-icon-only back-button invisible"
          type="button"
        >
          <span
            class="ant-btn-icon"
          >
            <span
              aria-label="left"
              class="anticon anticon-left"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="left"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                />
              </svg>
            </span>
          </span>
        </button>
        <div
          class="search-bar"
        >
          <span
            class="ant-input-affix-wrapper ant-input-affix-wrapper-sm css-dev-only-do-not-override-hash ant-input-outlined search-input"
          >
            <input
              class="ant-input ant-input-sm css-dev-only-do-not-override-hash"
              maxlength="50"
              type="search"
              value=""
            />
            <span
              class="ant-input-suffix"
            >
              <button
                class="ant-input-clear-icon ant-input-clear-icon-hidden"
                tabindex="-1"
                type="button"
              >
                <span
                  aria-label="close-circle"
                  class="anticon anticon-close-circle"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="close-circle"
                    fill="currentColor"
                    fill-rule="evenodd"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M512 64c247.4 0 448 200.6 448 448S759.4 960 512 960 64 759.4 64 512 264.6 64 512 64zm127.98 274.82h-.04l-.08.06L512 466.75 384.14 338.88c-.04-.05-.06-.06-.08-.06a.12.12 0 00-.07 0c-.03 0-.05.01-.09.05l-45.02 45.02a.2.2 0 00-.05.09.12.12 0 000 .07v.02a.27.27 0 00.06.06L466.75 512 338.88 639.86c-.05.04-.06.06-.06.08a.12.12 0 000 .07c0 .03.01.05.05.09l45.02 45.02a.2.2 0 00.09.05.12.12 0 00.07 0c.02 0 .04-.01.08-.05L512 557.25l127.86 127.87c.04.04.06.05.08.05a.12.12 0 00.07 0c.03 0 .05-.01.09-.05l45.02-45.02a.2.2 0 00.05-.09.12.12 0 000-.07v-.02a.27.27 0 00-.05-.06L557.25 512l127.87-127.86c.04-.04.05-.06.05-.08a.12.12 0 000-.07c0-.03-.01-.05-.05-.09l-45.02-45.02a.2.2 0 00-.09-.05.12.12 0 00-.07 0z"
                    />
                  </svg>
                </span>
              </button>
            </span>
          </span>
          <button
            class="ant-btn css-dev-only-do-not-override-hash ant-btn-circle ant-btn-default ant-btn-color-default ant-btn-variant-outlined ant-btn-icon-only search-button"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <span
                aria-label="search"
                class="anticon anticon-search"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="search"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0011.6 0l43.6-43.5a8.2 8.2 0 000-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
                  />
                </svg>
              </span>
            </span>
          </button>
        </div>
        <div
          class="adm-capsule-tabs select"
        >
          <div
            class="adm-capsule-tabs-header"
          >
            <div
              class="adm-scroll-mask adm-scroll-mask-left"
              style="opacity: 0;"
            />
            <div
              class="adm-scroll-mask adm-scroll-mask-right"
              style="opacity: 0;"
            />
            <div
              class="adm-capsule-tabs-tab-list"
            >
              <div
                class="adm-capsule-tabs-tab-wrapper"
              >
                <div
                  class="adm-capsule-tabs-tab adm-capsule-tabs-tab-active"
                >
                  Basic
                </div>
              </div>
              <div
                class="adm-capsule-tabs-tab-wrapper"
              >
                <div
                  class="adm-capsule-tabs-tab"
                >
                  Decor
                </div>
              </div>
              <div
                class="adm-capsule-tabs-tab-wrapper"
              >
                <div
                  class="adm-capsule-tabs-tab"
                >
                  Animal
                </div>
              </div>
              <div
                class="adm-capsule-tabs-tab-wrapper"
              >
                <div
                  class="adm-capsule-tabs-tab"
                >
                  Holiday
                </div>
              </div>
              <div
                class="adm-capsule-tabs-tab-wrapper"
              >
                <div
                  class="adm-capsule-tabs-tab"
                >
                  Nature
                </div>
              </div>
              <div
                class="adm-capsule-tabs-tab-wrapper"
              >
                <div
                  class="adm-capsule-tabs-tab"
                >
                  People
                </div>
              </div>
              <div
                class="adm-capsule-tabs-tab-wrapper"
              >
                <div
                  class="adm-capsule-tabs-tab"
                >
                  Tools
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="scroll-content"
      >
        <main-content
          types="basic,decor,animals,holidays,nature,people,tools"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`test ElementPanel Header in mobile should render MainType correctly 2`] = `
<div>
  <div
    class="adm-floating-panel adm-floating-panel-bottom panel panel"
    data-animating="false"
    style="height: 627px; transform: translateY(calc(100% + (-627px)));"
  >
    <div
      class="adm-floating-panel-mask"
      style="display: none;"
    />
    <div
      class="adm-floating-panel-header"
    >
      <div
        class="adm-floating-panel-bar"
      />
    </div>
    <div
      class="adm-floating-panel-content"
    >
      <span
        class="anticon close-icon"
        role="img"
        tabindex="-1"
      >
        <svgr-url
          aria-hidden="true"
          class=""
          fill="currentColor"
          focusable="false"
          height="1em"
          width="1em"
        />
      </span>
      <div
        class="title"
      >
        Elements
      </div>
      <div
        class="header hide-search"
      >
        <button
          class="ant-btn css-dev-only-do-not-override-hash ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-icon-only back-button invisible"
          type="button"
        >
          <span
            class="ant-btn-icon"
          >
            <span
              aria-label="left"
              class="anticon anticon-left"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="left"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                />
              </svg>
            </span>
          </span>
        </button>
        <div
          class="search-bar"
        >
          <span
            class="ant-input-affix-wrapper ant-input-affix-wrapper-sm css-dev-only-do-not-override-hash ant-input-outlined search-input"
          >
            <input
              class="ant-input ant-input-sm css-dev-only-do-not-override-hash"
              maxlength="50"
              type="search"
              value=""
            />
            <span
              class="ant-input-suffix"
            >
              <button
                class="ant-input-clear-icon ant-input-clear-icon-hidden"
                tabindex="-1"
                type="button"
              >
                <span
                  aria-label="close-circle"
                  class="anticon anticon-close-circle"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="close-circle"
                    fill="currentColor"
                    fill-rule="evenodd"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M512 64c247.4 0 448 200.6 448 448S759.4 960 512 960 64 759.4 64 512 264.6 64 512 64zm127.98 274.82h-.04l-.08.06L512 466.75 384.14 338.88c-.04-.05-.06-.06-.08-.06a.12.12 0 00-.07 0c-.03 0-.05.01-.09.05l-45.02 45.02a.2.2 0 00-.05.09.12.12 0 000 .07v.02a.27.27 0 00.06.06L466.75 512 338.88 639.86c-.05.04-.06.06-.06.08a.12.12 0 000 .07c0 .03.01.05.05.09l45.02 45.02a.2.2 0 00.09.05.12.12 0 00.07 0c.02 0 .04-.01.08-.05L512 557.25l127.86 127.87c.04.04.06.05.08.05a.12.12 0 00.07 0c.03 0 .05-.01.09-.05l45.02-45.02a.2.2 0 00.05-.09.12.12 0 000-.07v-.02a.27.27 0 00-.05-.06L557.25 512l127.87-127.86c.04-.04.05-.06.05-.08a.12.12 0 000-.07c0-.03-.01-.05-.05-.09l-45.02-45.02a.2.2 0 00-.09-.05.12.12 0 00-.07 0z"
                    />
                  </svg>
                </span>
              </button>
            </span>
          </span>
          <button
            class="ant-btn css-dev-only-do-not-override-hash ant-btn-circle ant-btn-default ant-btn-color-default ant-btn-variant-outlined ant-btn-icon-only search-button"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <span
                aria-label="search"
                class="anticon anticon-search"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="search"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0011.6 0l43.6-43.5a8.2 8.2 0 000-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
                  />
                </svg>
              </span>
            </span>
          </button>
        </div>
        <div
          class="adm-capsule-tabs select"
        >
          <div
            class="adm-capsule-tabs-header"
          >
            <div
              class="adm-scroll-mask adm-scroll-mask-left"
              style="opacity: 0;"
            />
            <div
              class="adm-scroll-mask adm-scroll-mask-right"
              style="opacity: 0;"
            />
            <div
              class="adm-capsule-tabs-tab-list"
            >
              <div
                class="adm-capsule-tabs-tab-wrapper"
              >
                <div
                  class="adm-capsule-tabs-tab adm-capsule-tabs-tab-active"
                >
                  Basic
                </div>
              </div>
              <div
                class="adm-capsule-tabs-tab-wrapper"
              >
                <div
                  class="adm-capsule-tabs-tab"
                >
                  Decor
                </div>
              </div>
              <div
                class="adm-capsule-tabs-tab-wrapper"
              >
                <div
                  class="adm-capsule-tabs-tab"
                >
                  Animal
                </div>
              </div>
              <div
                class="adm-capsule-tabs-tab-wrapper"
              >
                <div
                  class="adm-capsule-tabs-tab"
                >
                  Holiday
                </div>
              </div>
              <div
                class="adm-capsule-tabs-tab-wrapper"
              >
                <div
                  class="adm-capsule-tabs-tab"
                >
                  Nature
                </div>
              </div>
              <div
                class="adm-capsule-tabs-tab-wrapper"
              >
                <div
                  class="adm-capsule-tabs-tab"
                >
                  People
                </div>
              </div>
              <div
                class="adm-capsule-tabs-tab-wrapper"
              >
                <div
                  class="adm-capsule-tabs-tab"
                >
                  Tools
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="scroll-content"
      >
        <main-content
          types="basic,decor,animals,holidays,nature,people,tools"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`test ElementPanel Header in mobile should render Search correctly 1`] = `
<div>
  <div
    class="adm-floating-panel adm-floating-panel-bottom panel panel"
    data-animating="false"
    style="height: 627px; transform: translateY(calc(100% + (-627px)));"
  >
    <div
      class="adm-floating-panel-mask"
      style="display: none;"
    />
    <div
      class="adm-floating-panel-header"
    >
      <div
        class="adm-floating-panel-bar"
      />
    </div>
    <div
      class="adm-floating-panel-content"
    >
      <span
        class="anticon close-icon"
        role="img"
        tabindex="-1"
      >
        <svgr-url
          aria-hidden="true"
          class=""
          fill="currentColor"
          focusable="false"
          height="1em"
          width="1em"
        />
      </span>
      <div
        class="title"
      >
        Elements
      </div>
      <div
        class="header hide-select"
      >
        <button
          class="ant-btn css-dev-only-do-not-override-hash ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-icon-only back-button"
          type="button"
        >
          <span
            class="ant-btn-icon"
          >
            <span
              aria-label="left"
              class="anticon anticon-left"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="left"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                />
              </svg>
            </span>
          </span>
        </button>
        <div
          class="search-bar"
        >
          <span
            class="ant-input-affix-wrapper ant-input-affix-wrapper-sm css-dev-only-do-not-override-hash ant-input-outlined search-input"
          >
            <input
              class="ant-input ant-input-sm css-dev-only-do-not-override-hash"
              maxlength="50"
              type="search"
              value="123"
            />
            <span
              class="ant-input-suffix"
            >
              <button
                class="ant-input-clear-icon"
                tabindex="-1"
                type="button"
              >
                <span
                  aria-label="close-circle"
                  class="anticon anticon-close-circle"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="close-circle"
                    fill="currentColor"
                    fill-rule="evenodd"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M512 64c247.4 0 448 200.6 448 448S759.4 960 512 960 64 759.4 64 512 264.6 64 512 64zm127.98 274.82h-.04l-.08.06L512 466.75 384.14 338.88c-.04-.05-.06-.06-.08-.06a.12.12 0 00-.07 0c-.03 0-.05.01-.09.05l-45.02 45.02a.2.2 0 00-.05.09.12.12 0 000 .07v.02a.27.27 0 00.06.06L466.75 512 338.88 639.86c-.05.04-.06.06-.06.08a.12.12 0 000 .07c0 .03.01.05.05.09l45.02 45.02a.2.2 0 00.09.05.12.12 0 00.07 0c.02 0 .04-.01.08-.05L512 557.25l127.86 127.87c.04.04.06.05.08.05a.12.12 0 00.07 0c.03 0 .05-.01.09-.05l45.02-45.02a.2.2 0 00.05-.09.12.12 0 000-.07v-.02a.27.27 0 00-.05-.06L557.25 512l127.87-127.86c.04-.04.05-.06.05-.08a.12.12 0 000-.07c0-.03-.01-.05-.05-.09l-45.02-45.02a.2.2 0 00-.09-.05.12.12 0 00-.07 0z"
                    />
                  </svg>
                </span>
              </button>
            </span>
          </span>
          <button
            class="ant-btn css-dev-only-do-not-override-hash ant-btn-circle ant-btn-primary ant-btn-color-primary ant-btn-variant-solid ant-btn-icon-only search-button"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <span
                aria-label="search"
                class="anticon anticon-search"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="search"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0011.6 0l43.6-43.5a8.2 8.2 0 000-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
                  />
                </svg>
              </span>
            </span>
          </button>
        </div>
        <div
          class="adm-capsule-tabs select"
        >
          <div
            class="adm-capsule-tabs-header"
          >
            <div
              class="adm-scroll-mask adm-scroll-mask-left"
              style="opacity: 0;"
            />
            <div
              class="adm-scroll-mask adm-scroll-mask-right"
              style="opacity: 0;"
            />
            <div
              class="adm-capsule-tabs-tab-list"
            >
              <div
                class="adm-capsule-tabs-tab-wrapper"
              >
                <div
                  class="adm-capsule-tabs-tab adm-capsule-tabs-tab-active"
                >
                  Basic
                </div>
              </div>
              <div
                class="adm-capsule-tabs-tab-wrapper"
              >
                <div
                  class="adm-capsule-tabs-tab"
                >
                  Decor
                </div>
              </div>
              <div
                class="adm-capsule-tabs-tab-wrapper"
              >
                <div
                  class="adm-capsule-tabs-tab"
                >
                  Animal
                </div>
              </div>
              <div
                class="adm-capsule-tabs-tab-wrapper"
              >
                <div
                  class="adm-capsule-tabs-tab"
                >
                  Holiday
                </div>
              </div>
              <div
                class="adm-capsule-tabs-tab-wrapper"
              >
                <div
                  class="adm-capsule-tabs-tab"
                >
                  Nature
                </div>
              </div>
              <div
                class="adm-capsule-tabs-tab-wrapper"
              >
                <div
                  class="adm-capsule-tabs-tab"
                >
                  People
                </div>
              </div>
              <div
                class="adm-capsule-tabs-tab-wrapper"
              >
                <div
                  class="adm-capsule-tabs-tab"
                >
                  Tools
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="scroll-content"
      >
        <main-content
          types="basic,decor,animals,holidays,nature,people,tools"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`test ElementPanel Header in mobile should render SubType correctly 1`] = `
<div>
  <div
    class="adm-floating-panel adm-floating-panel-bottom panel panel"
    data-animating="false"
    style="height: 627px; transform: translateY(calc(100% + (-627px)));"
  >
    <div
      class="adm-floating-panel-mask"
      style="display: none;"
    />
    <div
      class="adm-floating-panel-header"
    >
      <div
        class="adm-floating-panel-bar"
      />
    </div>
    <div
      class="adm-floating-panel-content"
    >
      <span
        class="anticon close-icon"
        role="img"
        tabindex="-1"
      >
        <svgr-url
          aria-hidden="true"
          class=""
          fill="currentColor"
          focusable="false"
          height="1em"
          width="1em"
        />
      </span>
      <div
        class="title"
      >
        Elements
      </div>
      <div
        class="header hide-search hide-select"
      >
        <button
          class="ant-btn css-dev-only-do-not-override-hash ant-btn-text ant-btn-color-default ant-btn-variant-text back-button"
          type="button"
        >
          <span
            class="ant-btn-icon"
          >
            <span
              aria-label="left"
              class="anticon anticon-left"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="left"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                />
              </svg>
            </span>
          </span>
          <span>
            Shape
          </span>
        </button>
        <div
          class="search-bar"
        >
          <span
            class="ant-input-affix-wrapper ant-input-affix-wrapper-sm css-dev-only-do-not-override-hash ant-input-outlined search-input"
          >
            <input
              class="ant-input ant-input-sm css-dev-only-do-not-override-hash"
              maxlength="50"
              type="search"
              value=""
            />
            <span
              class="ant-input-suffix"
            >
              <button
                class="ant-input-clear-icon ant-input-clear-icon-hidden"
                tabindex="-1"
                type="button"
              >
                <span
                  aria-label="close-circle"
                  class="anticon anticon-close-circle"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="close-circle"
                    fill="currentColor"
                    fill-rule="evenodd"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M512 64c247.4 0 448 200.6 448 448S759.4 960 512 960 64 759.4 64 512 264.6 64 512 64zm127.98 274.82h-.04l-.08.06L512 466.75 384.14 338.88c-.04-.05-.06-.06-.08-.06a.12.12 0 00-.07 0c-.03 0-.05.01-.09.05l-45.02 45.02a.2.2 0 00-.05.09.12.12 0 000 .07v.02a.27.27 0 00.06.06L466.75 512 338.88 639.86c-.05.04-.06.06-.06.08a.12.12 0 000 .07c0 .03.01.05.05.09l45.02 45.02a.2.2 0 00.09.05.12.12 0 00.07 0c.02 0 .04-.01.08-.05L512 557.25l127.86 127.87c.04.04.06.05.08.05a.12.12 0 00.07 0c.03 0 .05-.01.09-.05l45.02-45.02a.2.2 0 00.05-.09.12.12 0 000-.07v-.02a.27.27 0 00-.05-.06L557.25 512l127.87-127.86c.04-.04.05-.06.05-.08a.12.12 0 000-.07c0-.03-.01-.05-.05-.09l-45.02-45.02a.2.2 0 00-.09-.05.12.12 0 00-.07 0z"
                    />
                  </svg>
                </span>
              </button>
            </span>
          </span>
          <button
            class="ant-btn css-dev-only-do-not-override-hash ant-btn-circle ant-btn-default ant-btn-color-default ant-btn-variant-outlined ant-btn-icon-only search-button"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <span
                aria-label="search"
                class="anticon anticon-search"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="search"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0011.6 0l43.6-43.5a8.2 8.2 0 000-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
                  />
                </svg>
              </span>
            </span>
          </button>
        </div>
        <div
          class="adm-capsule-tabs select"
        >
          <div
            class="adm-capsule-tabs-header"
          >
            <div
              class="adm-scroll-mask adm-scroll-mask-left"
              style="opacity: 0;"
            />
            <div
              class="adm-scroll-mask adm-scroll-mask-right"
              style="opacity: 0;"
            />
            <div
              class="adm-capsule-tabs-tab-list"
            >
              <div
                class="adm-capsule-tabs-tab-wrapper"
              >
                <div
                  class="adm-capsule-tabs-tab adm-capsule-tabs-tab-active"
                >
                  Basic
                </div>
              </div>
              <div
                class="adm-capsule-tabs-tab-wrapper"
              >
                <div
                  class="adm-capsule-tabs-tab"
                >
                  Decor
                </div>
              </div>
              <div
                class="adm-capsule-tabs-tab-wrapper"
              >
                <div
                  class="adm-capsule-tabs-tab"
                >
                  Animal
                </div>
              </div>
              <div
                class="adm-capsule-tabs-tab-wrapper"
              >
                <div
                  class="adm-capsule-tabs-tab"
                >
                  Holiday
                </div>
              </div>
              <div
                class="adm-capsule-tabs-tab-wrapper"
              >
                <div
                  class="adm-capsule-tabs-tab"
                >
                  Nature
                </div>
              </div>
              <div
                class="adm-capsule-tabs-tab-wrapper"
              >
                <div
                  class="adm-capsule-tabs-tab"
                >
                  People
                </div>
              </div>
              <div
                class="adm-capsule-tabs-tab-wrapper"
              >
                <div
                  class="adm-capsule-tabs-tab"
                >
                  Tools
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="scroll-content"
      >
        <main-content
          types="basic,decor,animals,holidays,nature,people,tools"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`test ElementPanel Header should render MainType correctly 1`] = `
<body>
  <div
    class="adm-px-tester"
    style="--size: 10;"
  />
  <div
    class="adm-px-tester"
  />
  <div />
  <div
    class="ant-drawer ant-drawer-left no-mask drawer css-dev-only-do-not-override-hash ant-drawer-open"
    tabindex="-1"
  >
    <div
      aria-hidden="true"
      data-sentinel="start"
      style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
      tabindex="0"
    />
    <div
      class="ant-drawer-content-wrapper"
      style="width: 378px;"
    >
      <div
        aria-modal="true"
        class="ant-drawer-content"
        role="dialog"
      >
        <div
          class="ant-drawer-header drawer-header"
        >
          <div
            class="ant-drawer-header-title"
          >
            <div
              class="ant-drawer-title"
            >
              <div
                class="header hide-search"
              >
                <div
                  class="title"
                >
                  Elements
                </div>
                <div
                  class="ant-select ant-select-outlined select css-dev-only-do-not-override-hash ant-select-single ant-select-show-arrow"
                >
                  <div
                    class="ant-select-selector"
                  >
                    <span
                      class="ant-select-selection-wrap"
                    >
                      <span
                        class="ant-select-selection-search"
                      >
                        <input
                          aria-autocomplete="list"
                          aria-controls="rc_select_TEST_OR_SSR_list"
                          aria-expanded="false"
                          aria-haspopup="listbox"
                          aria-owns="rc_select_TEST_OR_SSR_list"
                          autocomplete="off"
                          class="ant-select-selection-search-input"
                          id="rc_select_TEST_OR_SSR"
                          readonly=""
                          role="combobox"
                          style="opacity: 0;"
                          type="search"
                          unselectable="on"
                          value=""
                        />
                      </span>
                      <span
                        class="ant-select-selection-item"
                        title="Basic"
                      >
                        Basic
                      </span>
                    </span>
                  </div>
                  <span
                    aria-hidden="true"
                    class="ant-select-arrow"
                    style="user-select: none;"
                    unselectable="on"
                  >
                    <span
                      aria-label="down"
                      class="anticon anticon-down ant-select-suffix"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="down"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
                <div
                  class="search-bar"
                >
                  <span
                    class="ant-input-affix-wrapper ant-input-affix-wrapper-sm css-dev-only-do-not-override-hash ant-input-outlined search-input"
                  >
                    <input
                      class="ant-input ant-input-sm css-dev-only-do-not-override-hash"
                      maxlength="50"
                      type="search"
                      value=""
                    />
                    <span
                      class="ant-input-suffix"
                    >
                      <button
                        class="ant-input-clear-icon ant-input-clear-icon-hidden"
                        tabindex="-1"
                        type="button"
                      >
                        <span
                          aria-label="close-circle"
                          class="anticon anticon-close-circle"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="close-circle"
                            fill="currentColor"
                            fill-rule="evenodd"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M512 64c247.4 0 448 200.6 448 448S759.4 960 512 960 64 759.4 64 512 264.6 64 512 64zm127.98 274.82h-.04l-.08.06L512 466.75 384.14 338.88c-.04-.05-.06-.06-.08-.06a.12.12 0 00-.07 0c-.03 0-.05.01-.09.05l-45.02 45.02a.2.2 0 00-.05.09.12.12 0 000 .07v.02a.27.27 0 00.06.06L466.75 512 338.88 639.86c-.05.04-.06.06-.06.08a.12.12 0 000 .07c0 .03.01.05.05.09l45.02 45.02a.2.2 0 00.09.05.12.12 0 00.07 0c.02 0 .04-.01.08-.05L512 557.25l127.86 127.87c.04.04.06.05.08.05a.12.12 0 00.07 0c.03 0 .05-.01.09-.05l45.02-45.02a.2.2 0 00.05-.09.12.12 0 000-.07v-.02a.27.27 0 00-.05-.06L557.25 512l127.87-127.86c.04-.04.05-.06.05-.08a.12.12 0 000-.07c0-.03-.01-.05-.05-.09l-45.02-45.02a.2.2 0 00-.09-.05.12.12 0 00-.07 0z"
                            />
                          </svg>
                        </span>
                      </button>
                    </span>
                  </span>
                  <button
                    class="ant-btn css-dev-only-do-not-override-hash ant-btn-circle ant-btn-default ant-btn-color-default ant-btn-variant-outlined ant-btn-icon-only search-button"
                    type="button"
                  >
                    <span
                      class="ant-btn-icon"
                    >
                      <span
                        aria-label="search"
                        class="anticon anticon-search"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="search"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0011.6 0l43.6-43.5a8.2 8.2 0 000-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
                          />
                        </svg>
                      </span>
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-drawer-body drawer-body"
        >
          <div
            class="handle"
          >
            <span
              aria-label="left"
              class="anticon anticon-left"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="left"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                />
              </svg>
            </span>
          </div>
          <main-content
            types="basic,decor,animals,holidays,nature,people,tools"
          />
        </div>
      </div>
    </div>
    <div
      aria-hidden="true"
      data-sentinel="end"
      style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`test ElementPanel Header should render Search correctly 1`] = `
<body>
  <div
    class="adm-px-tester"
    style="--size: 10;"
  />
  <div
    class="adm-px-tester"
  />
  <div />
  <div
    class="ant-drawer ant-drawer-left no-mask drawer css-dev-only-do-not-override-hash ant-drawer-open"
    tabindex="-1"
  >
    <div
      aria-hidden="true"
      data-sentinel="start"
      style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
      tabindex="0"
    />
    <div
      class="ant-drawer-content-wrapper"
      style="width: 378px;"
    >
      <div
        aria-modal="true"
        class="ant-drawer-content"
        role="dialog"
      >
        <div
          class="ant-drawer-header drawer-header"
        >
          <div
            class="ant-drawer-header-title"
          >
            <div
              class="ant-drawer-title"
            >
              <div
                class="header"
              >
                <button
                  class="ant-btn css-dev-only-do-not-override-hash ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-icon-only back-button"
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <span
                      aria-label="left"
                      class="anticon anticon-left"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="left"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                        />
                      </svg>
                    </span>
                  </span>
                </button>
                <div
                  class="search-bar"
                >
                  <span
                    class="ant-input-affix-wrapper ant-input-affix-wrapper-sm css-dev-only-do-not-override-hash ant-input-outlined search-input"
                  >
                    <input
                      class="ant-input ant-input-sm css-dev-only-do-not-override-hash"
                      maxlength="50"
                      type="search"
                      value="123"
                    />
                    <span
                      class="ant-input-suffix"
                    >
                      <button
                        class="ant-input-clear-icon"
                        tabindex="-1"
                        type="button"
                      >
                        <span
                          aria-label="close-circle"
                          class="anticon anticon-close-circle"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="close-circle"
                            fill="currentColor"
                            fill-rule="evenodd"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M512 64c247.4 0 448 200.6 448 448S759.4 960 512 960 64 759.4 64 512 264.6 64 512 64zm127.98 274.82h-.04l-.08.06L512 466.75 384.14 338.88c-.04-.05-.06-.06-.08-.06a.12.12 0 00-.07 0c-.03 0-.05.01-.09.05l-45.02 45.02a.2.2 0 00-.05.09.12.12 0 000 .07v.02a.27.27 0 00.06.06L466.75 512 338.88 639.86c-.05.04-.06.06-.06.08a.12.12 0 000 .07c0 .03.01.05.05.09l45.02 45.02a.2.2 0 00.09.05.12.12 0 00.07 0c.02 0 .04-.01.08-.05L512 557.25l127.86 127.87c.04.04.06.05.08.05a.12.12 0 00.07 0c.03 0 .05-.01.09-.05l45.02-45.02a.2.2 0 00.05-.09.12.12 0 000-.07v-.02a.27.27 0 00-.05-.06L557.25 512l127.87-127.86c.04-.04.05-.06.05-.08a.12.12 0 000-.07c0-.03-.01-.05-.05-.09l-45.02-45.02a.2.2 0 00-.09-.05.12.12 0 00-.07 0z"
                            />
                          </svg>
                        </span>
                      </button>
                    </span>
                  </span>
                  <button
                    class="ant-btn css-dev-only-do-not-override-hash ant-btn-circle ant-btn-primary ant-btn-color-primary ant-btn-variant-solid ant-btn-icon-only search-button"
                    type="button"
                  >
                    <span
                      class="ant-btn-icon"
                    >
                      <span
                        aria-label="search"
                        class="anticon anticon-search"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="search"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0011.6 0l43.6-43.5a8.2 8.2 0 000-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
                          />
                        </svg>
                      </span>
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-drawer-body drawer-body"
        >
          <div
            class="handle"
          >
            <span
              aria-label="left"
              class="anticon anticon-left"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="left"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                />
              </svg>
            </span>
          </div>
          <main-content
            types="basic,decor,animals,holidays,nature,people,tools"
          />
        </div>
      </div>
    </div>
    <div
      aria-hidden="true"
      data-sentinel="end"
      style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`test ElementPanel Header should render SubType correctly 1`] = `
<body>
  <div
    class="adm-px-tester"
    style="--size: 10;"
  />
  <div
    class="adm-px-tester"
  />
  <div />
  <div
    class="ant-drawer ant-drawer-left no-mask drawer css-dev-only-do-not-override-hash ant-drawer-open"
    tabindex="-1"
  >
    <div
      aria-hidden="true"
      data-sentinel="start"
      style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
      tabindex="0"
    />
    <div
      class="ant-drawer-content-wrapper"
      style="width: 378px;"
    >
      <div
        aria-modal="true"
        class="ant-drawer-content"
        role="dialog"
      >
        <div
          class="ant-drawer-header drawer-header"
        >
          <div
            class="ant-drawer-header-title"
          >
            <div
              class="ant-drawer-title"
            >
              <div
                class="header hide-search"
              >
                <button
                  class="ant-btn css-dev-only-do-not-override-hash ant-btn-text ant-btn-color-default ant-btn-variant-text back-button"
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <span
                      aria-label="left"
                      class="anticon anticon-left"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="left"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                        />
                      </svg>
                    </span>
                  </span>
                  <span>
                    Shape
                  </span>
                </button>
                <div
                  class="search-bar"
                >
                  <span
                    class="ant-input-affix-wrapper ant-input-affix-wrapper-sm css-dev-only-do-not-override-hash ant-input-outlined search-input"
                  >
                    <input
                      class="ant-input ant-input-sm css-dev-only-do-not-override-hash"
                      maxlength="50"
                      type="search"
                      value=""
                    />
                    <span
                      class="ant-input-suffix"
                    >
                      <button
                        class="ant-input-clear-icon ant-input-clear-icon-hidden"
                        tabindex="-1"
                        type="button"
                      >
                        <span
                          aria-label="close-circle"
                          class="anticon anticon-close-circle"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="close-circle"
                            fill="currentColor"
                            fill-rule="evenodd"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M512 64c247.4 0 448 200.6 448 448S759.4 960 512 960 64 759.4 64 512 264.6 64 512 64zm127.98 274.82h-.04l-.08.06L512 466.75 384.14 338.88c-.04-.05-.06-.06-.08-.06a.12.12 0 00-.07 0c-.03 0-.05.01-.09.05l-45.02 45.02a.2.2 0 00-.05.09.12.12 0 000 .07v.02a.27.27 0 00.06.06L466.75 512 338.88 639.86c-.05.04-.06.06-.06.08a.12.12 0 000 .07c0 .03.01.05.05.09l45.02 45.02a.2.2 0 00.09.05.12.12 0 00.07 0c.02 0 .04-.01.08-.05L512 557.25l127.86 127.87c.04.04.06.05.08.05a.12.12 0 00.07 0c.03 0 .05-.01.09-.05l45.02-45.02a.2.2 0 00.05-.09.12.12 0 000-.07v-.02a.27.27 0 00-.05-.06L557.25 512l127.87-127.86c.04-.04.05-.06.05-.08a.12.12 0 000-.07c0-.03-.01-.05-.05-.09l-45.02-45.02a.2.2 0 00-.09-.05.12.12 0 00-.07 0z"
                            />
                          </svg>
                        </span>
                      </button>
                    </span>
                  </span>
                  <button
                    class="ant-btn css-dev-only-do-not-override-hash ant-btn-circle ant-btn-default ant-btn-color-default ant-btn-variant-outlined ant-btn-icon-only search-button"
                    type="button"
                  >
                    <span
                      class="ant-btn-icon"
                    >
                      <span
                        aria-label="search"
                        class="anticon anticon-search"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="search"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0011.6 0l43.6-43.5a8.2 8.2 0 000-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
                          />
                        </svg>
                      </span>
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-drawer-body drawer-body"
        >
          <div
            class="handle"
          >
            <span
              aria-label="left"
              class="anticon anticon-left"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="left"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                />
              </svg>
            </span>
          </div>
          <main-content
            types="basic,decor,animals,holidays,nature,people,tools"
          />
        </div>
      </div>
    </div>
    <div
      aria-hidden="true"
      data-sentinel="end"
      style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
      tabindex="0"
    />
  </div>
</body>
`;
